--- a/iris.ipynb
+++ b/iris.ipynb
@@ -34,8 +34,15 @@
    "metadata": {}
   },
   {
+   "source": [
+    "In this exercise, I think we're going to play with the data  using the Iris flower data set."
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 145,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,20 +52,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 146,
    "metadata": {},
-   "outputs": [
-    {
-     "output_type": "execute_result",
-     "data": {
-      "text/plain": [
-       "array(['setosa', 'versicolor', 'virginica'], dtype='<U10')"
-      ]
-     },
-     "metadata": {},
-     "execution_count": 5
-    }
-   ],
+   "outputs": [],
    "source": [
     "X = iris.data # array of data of the images -> each list is a piece of idea that represents the parameters of the iris flower\n",
     "y = iris.target \n",
@@ -86,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 147,
    "metadata": {},
    "outputs": [
     {
@@ -99,12 +95,193 @@
    ],
    "source": [
     "from sklearn.model_selection import train_test_split\n",
-    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2)\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2) # 4 different data sets\n",
     "\n",
     "print(X_train.shape) # it's better to have more train data than test\n",
     "print(X_test.shape)\n",
     "# these prints in the \"dimensionality\" of the array\n",
     "# how many rows and columns "
+   ]
+  },
+  {
+   "source": [
+    "# Creating a Model"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 148,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "KNeighborsClassifier(n_neighbors=3)"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 148
+    }
+   ],
+   "source": [
+    "from sklearn.neighbors import KNeighborsClassifier\n",
+    "# from https://scikit-learn.org/stable/modules/neighbors.html#nearest-neighbors-classification\n",
+    "\n",
+    "knn = KNeighborsClassifier(n_neighbors=3) \n",
+    "# doesn't have to match the number of flowers (which is 3). It asks \"how many data points around me to observe tot decide which type of flower I am?\"\n",
+    "\n",
+    "knn.fit(X_train, y_train)"
+   ]
+  },
+  {
+   "source": [
+    "# Check the Output"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 149,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "y_predict = knn.predict(X_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 150,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "0.9333333333333333\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn import metrics\n",
+    "print(metrics.accuracy_score(y_test, y_predict))"
+   ]
+  },
+  {
+   "source": [
+    "Idk what this means."
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "source": [
+    "We can then improve if we want."
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "source": [
+    "# Improving"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 151,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.tree import DecisionTreeClassifier"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 152,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "Predictions:  ['versicolor', 'virginica']\n"
+     ]
+    }
+   ],
+   "source": [
+    "sample = [[3,5,4,2], [2,3,5,4]] # sample data\n",
+    "\n",
+    "predictions = knn.predict(sample)\n",
+    "pred_species = [iris.target_names[p] for p in predictions]\n",
+    "\n",
+    "print('Predictions: ', pred_species)"
+   ]
+  },
+  {
+   "source": [
+    "In here, we are testing out a 'random' sample with some data that corresponds to the features or the columns"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "source": [
+    "## Model Persistence"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 153,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "['mlbrain.joblib']"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 153
+    }
+   ],
+   "source": [
+    "# from sklearn.externals import joblib\n",
+    "import joblib\n",
+    "joblib.dump(knn, 'mlbrain.joblib')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 154,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "Predictions:  ['versicolor', 'virginica']\n"
+     ]
+    }
+   ],
+   "source": [
+    "model = joblib.load('mlbrain.joblib') # saving the model so that we don't have to train it all the time\n",
+    "model.predict(X_test)\n",
+    "\n",
+    "# Copied from above\n",
+    "sample = [[3,5,4,2], [2,3,5,4]] # sample data\n",
+    "\n",
+    "predictions = model.predict(sample)\n",
+    "pred_species = [iris.target_names[p] for p in predictions]\n",
+    "\n",
+    "print('Predictions: ', pred_species)"
    ]
   },
   {
