--- a/iris.ipynb
+++ b/iris.ipynb
@@ -10,15 +10,15 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.1-final"
+   "version": "3.8.7"
   },
   "orig_nbformat": 2,
   "kernelspec": {
    "name": "python3",
-   "display_name": "Python 3.9.1 64-bit",
+   "display_name": "Python 3.8.7 64-bit",
    "metadata": {
     "interpreter": {
-     "hash": "705568c7ad2e1c8abb90a7ca97518b26594c4a66b482ac862492195b30430f5d"
+     "hash": "bf02e89489843b4365be857411688b6b65cd7948c322260c471cbb03179ad80c"
     }
    }
   }
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 145,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 146,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -82,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 147,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -112,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 148,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -123,7 +123,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 148
+     "execution_count": 4
     }
    ],
    "source": [
@@ -145,7 +145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 149,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -154,7 +154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 150,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -193,7 +193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 151,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -202,7 +202,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 152,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -238,7 +238,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 153,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -249,7 +249,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 153
+     "execution_count": 9
     }
    ],
    "source": [
@@ -260,7 +260,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 154,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -283,13 +283,6 @@
     "\n",
     "print('Predictions: ', pred_species)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ]
 }
